# hsct

./: .gitignore  flake.nix  hsct.cabal
src/: Main.hs
