cabal-version:   3.0
name:            hsct
version:         0.1.0.0
license:         MIT
author:          TheMagzuz
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:   
        base,
        containers ^>=0.6.7
    hs-source-dirs:   src
    default-language: Haskell2010
